--- a/index.html
+++ b/index.html
@@ -63,8 +63,8 @@
   <header class="masthead">
     <div class="container">
       <div class="intro-text">
-        <div class="intro-lead-in">Selamat datang di Portfolioku!</div>
-        <div class="intro-lead-in">Aku adalah seorang Web/Android Developer</div>
+        <div class="intro-lead-in">Selamat datang di Portofolioku!</div>
+        <div class="intro-lead-in">Saya adalah seorang Web/Android Developer</div>
         <!-- <a class="btn btn-primary btn-xl text-uppercase js-scroll-trigger" href="#services">Tell Me More</a> -->
       </div>
     </div>
